Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="absolute inset-0 z-0">
       <!-- 背景圖片 -->
       <img 
-        src="https://previews.dropbox.com/p/thumb/AC7_POtVUEdK7wcayNpyx61JIdQ7I2x3brfMVJViJORNfgTZbokiTVKl20EFmFS1PcvKvre2iA9AVkWeK62bPIpKaddtBpldnFIDy22WLbrlhWpxnsvmgfAJiAxmbBkehIu0IXZhc9Qbs6pfFI-_MI8PZxNxb_z6S2dL54a_NeCbxFdmImyDc3HpppnCeCsycK5MytATnJ7ysWHtBG12RFRafR-0d8FjIUUyeGVMmcKG9e2grlmJ9GWtEMpF15r1qgMBZFlkhc4v87iYfmlQqW2BPkCRhRY2KQtCvPLW_JSpP31j6MLHGy5RNQ9XGcrssTc0YkYdNK65_EXpHP7bRB58/p.png?is_prewarmed=true" 
+        src="https://github.com/hesspbd/HESSverse/blob/main/BG.png?raw=true" 
         alt="活動主視覺" 
         class="w-full h-full object-cover"
       >
@@ -388,4 +388,5 @@
         const menu = document.getElementById('mobile-menu');
         menu.classList.toggle('hidden');
     }
+
 </script>
