--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <!-- 載入 Lucide Icons (圖示核心) -->
 <script src="https://unpkg.com/lucide@latest"></script>
 
+<head>
+  <title>HESSverse英語探險宇宙</title>
+</head>
+
 <style>
   /* 避免 WordPress 主題干擾樣式 */
   .wp-block-group__inner-container { max-width: 100% !important; padding: 0 !important; }
@@ -389,3 +393,4 @@
         menu.classList.toggle('hidden');
     }
 </script>
+
