Update fmt.Println message to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <head>
   <title>HESSverse英語探險宇宙</title>
+  <link rel="icon" type="image/png" href="https://github.com/hesspbd/HESSverse/blob/main/LOGO1.png?raw=true">
+  <meta property="og:description" content="探索教學的無限原力">
 </head>
 
 <style>
@@ -393,4 +395,5 @@
         menu.classList.toggle('hidden');
     }
 </script>
+
 
