--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <title>HESSverse英語探險宇宙</title>
   <link rel="icon" type="image/png" href="https://github.com/hesspbd/HESSverse/blob/main/LOGO1.png?raw=true">
   <meta property="og:description" content="探索教學的無限原力">
+  <meta property="og:image" content="https://github.com/hesspbd/HESSverse/blob/main/LOGO1.png?raw=true">
 </head>
 
 <style>
@@ -395,5 +396,6 @@
         menu.classList.toggle('hidden');
     }
 </script>
+
 
 
